Relaxed the initial validation of IOTA-VTI timestamp OCR, so incorrectly read timestamps could get a chance to be corrected in the later logic.
Implemented OCR correction logic when the video is running with a step different than one frame.

--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -5,9 +5,10 @@ v3.6.1 (UNRELEASED)
 -------------------
 - Made it possible to fix interlaced video field grabbing defects by swaping and/or shifting the video fields inside video frames.
 - IOTA-VTI timestamps can now also be read (OCR-ed) when doing astrometry.
+- Improvements to the IOTA-VTI timestamp reading that should produce less incorrectly read timestamps. 
 - Made the integration detection recognize Mintron's odd integration rates: x3, x6, x12, x24, ... 
 - Implemented hot pixel removal in the Astrometry module.
-- Made it possible to export every 2-nd, 4-th,..., 64-th frame in the 'Export Video to FITS' operation
+- Made it possible to export every 2-nd, 4-th,..., 64-th frame in the 'Export Video to FITS' operation.
 
 v3.6.0 (2016-10-11)
 -------------------
