--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -3,7 +3,9 @@
 
 v3.6.2 (UNRELEASED)
 -------------------
-- Made is possible to export additioanl parameters to CSV from a light curve, inclulding the X and Y coordinates, FWHM and PSF height of the measured objects. 
+- Made it possible to export additioanl parameters to CSV from a light curve, inclulding the X and Y coordinates, FWHM and PSF height of the measured objects. 
+- Made it possible to export astrometry in all measured frames to CSV.
+- Renamed 'Export Video to FITS' to 'Convert Video to FITS'
 
 v3.6.1 (2016-11-13)
 -------------------
