--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -6,6 +6,7 @@ v3.6.2 (UNRELEASED)
 - Made it possible to export additioanl parameters to CSV from a light curve, inclulding the X and Y coordinates, FWHM and PSF height of the measured objects. 
 - Made it possible to export astrometry in all measured frames to CSV.
 - Renamed 'Export Video to FITS' to 'Convert Video to FITS'
+- Implemented 'Convert Video to AAV' operation which detects the integration intervals and produces an AAV file from an AVI recorded with integrating camera.
 
 v3.6.1 (2016-11-13)
 -------------------
