--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,5 +1,7 @@
 ﻿Tangra3 Release Notes
 ---------------------
+vX.X.X (Unreleased)
+- Now the light curve and astrometry reductions will ensure the video is positioned at a non-duplicated frame before starting.
 
 v3.6.3 (2017-01-23)
 -------------------
