Changes to Astrometry to support wide field astrometry of artificial satellites recorded with non-integrating cameras.

--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -2,6 +2,7 @@
 ---------------------
 vX.X.X (Unreleased)
 - A full rework of the fast motion astrometry which now reports uncertainty estimates and provides more control of the motion fitting.
+- Support for wide field astrometry of bright artifitial satellites.
 - Improved the x2 frames integration detection used in astrometry and AVI-to-AAV file conversion.
 - Fixed a crash when viewing ADV/AAV version 2 files bigger than 2Gb. Upgraded AdvLib to version 2.0g.
 - Now the light curve and astrometry reductions will ensure the video is positioned at a non-duplicated frame before the start of the reduction.
