Now the AOTA integration will also save the raw AOTA report in an .aota.xml file.

--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -7,6 +7,7 @@ vX.X.X (Unreleased)
 - Fixed a crash when viewing ADV/AAV version 2 files bigger than 2Gb. Upgraded AdvLib to version 2.0g.
 - Now the light curve and astrometry reductions will ensure the video is positioned at a non-duplicated frame before the start of the reduction.
 - Fixed a crash when using software integration with SER files.
+- Tangra will now save the raw report from AOTA in an .aota.xml file next to the Tangra .trep.xml report file.
 
 v3.6.3 (2017-01-23)
 -------------------
