--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,5 +1,8 @@
 ﻿Tangra3 Release Notes
 ---------------------
+vNext (Unreleased)
+- Added a button to add astrometric positions to an MPC report to the Fast Motion Astrometry form as well.
+
 v3.6.4 (2017-04-12)
 - A full rework of the fast motion astrometry which now reports uncertainty estimates and provides more control of the motion fitting.
 - Support for wide field astrometry of bright artifitial satellites.
