Now allowing for any rectangular area to be the VTI-OSD are to be preserved during the AVI-to-AAV conversion.

--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -2,6 +2,7 @@
 ---------------------
 vNext (Unreleased)
 - Added a button to add astrometric positions to an MPC report to the Fast Motion Astrometry form as well.
+- Improved the the VTI-OSD area selection when doing AVI-to-AAV file conversion. 
 
 v3.6.4 (2017-04-12)
 - A full rework of the fast motion astrometry which now reports uncertainty estimates and provides more control of the motion fitting.
