--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,7 +1,10 @@
 ﻿Tangra3 Release Notes
 ---------------------
+vNext (Unreleased)
+- Made it possible to manually specify video integration settings when converting from AVI-to-AAV.
+
 v3.6.5 (2017-04-23)
-- Fixed critical usability issues with the fast motion astrometry
+- Fixed critical usability issues with the fast motion astrometry.
 - Improved the the VTI-OSD area selection when doing AVI-to-AAV file conversion. 
 
 v3.6.4 (2017-04-19)
@@ -12,7 +15,7 @@ v3.6.4 (2017-04-19)
 - Now the light curve and astrometry reductions will ensure the video is positioned at a non-duplicated frame before the start of the reduction.
 - Fixed a crash when using software integration with SER files.
 - Tangra will now save the raw report from AOTA in an .aota.xml file next to the Tangra .trep.xml report file.
-- Fixed the tracking of a single fully disappearing drift-through star
+- Fixed the tracking of a single fully disappearing drift-through star.
 
 v3.6.3 (2017-01-23)
 -------------------
