--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -2,6 +2,7 @@
 ---------------------
 vNext (Unreleased)
 - Made it possible to manually specify video integration settings when converting from AVI-to-AAV.
+- Fixed a problem that that was preventing a x2 frames integration to be detected when starting from even frame.
 
 v3.6.5 (2017-04-23)
 - Fixed critical usability issues with the fast motion astrometry.
