--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,5 +1,9 @@
 ﻿Tangra3 Release Notes
 ---------------------
+vNext (UNRELESED)
+- Fixed a problem where IOTA-VTI OCR would return the timestamp from the 'wrong' field if field numbers are not read correctly.
+- Improvements to the OCR error corrections for errors caused by star contamination or noise.
+
 v3.6.6 (2017-07-01)
 - Significant improvements in the Astrometry module which makes the processing faster and more succesfull, particularly for fields with very few stars.
 - Fixed a regional settings problem when working with AAV.V2 videos.
