--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,5 +1,9 @@
 ﻿Tangra3 Release Notes
 ---------------------
+vNext (UNRELEASED)
+- Made it possible to mask a contaminated area of the video, e.g. trees or defects, so it doesn't interfere with astrometry.
+
+
 v3.6.7 (2017-07-20)
 - Fixed a problem where IOTA-VTI OCR would return the timestamp from the 'wrong' field if field numbers are not read correctly.
 - Improvements to the OCR error corrections for errors caused by star contamination of the timestamp or noise.
