--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,6 +1,17 @@
 ﻿Tangra3 Release Notes
 ---------------------
+v3.6.12 (2017-10-25)
+- Fixed an issue when working with SER/AAV/ADV/FITS files where width*height is not a multiple of 4 (there is an odd width or height).
+- Added support for 3-axis RGB FITS sequences created by MaximDL.
+- A number of fixes and improvements to the handling of AAV files, including fixing a problem with AAV-to-FITS export of AAV ver1 files producing black frames.
+- Other bugfixes and stability improvements.
+
+v3.6.11 (2017-10-23)
+- Fixed a problem where processing AAV.v2 files would incorrectly claim that there is more than 5ms error when verifying manually entered timestamps.
+- Other minor fixes and improvements related to AAV.v2 files handling.
+
 v3.6.10 (2017-10-11)
+
 - Fixed a problem where some FITS sequences recorded by SharpCap could not be open in Tangra.
 - Fixed an issue where opening a 12-bit SER files may open it by default as 8-bit.
 - Other minor fixes and improvements.
