--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,5 +1,9 @@
 ﻿Tangra3 Release Notes
 ---------------------
+vNext (xxxx-xx-xx)
+- Upgraded to .NET Framework 4.5
+- Made it possible to export a light curve as a vector graphic (EMF format)
+
 v3.6.13 (2017-11-03)
 - Disabled further updates on system running Windows XP in a preparation for upgrade to .NET 4.5
 - Fixed an issue where brightness adjustments were not applied correctly for AAV files.
