--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,8 +1,9 @@
 ﻿Tangra3 Release Notes
 ---------------------
 vNext (xxxx-xx-xx)
-- Fixed a problem where if positions with high precision are used in Fast Motion Astrometry, the line exported to an MPC report will have bad RA.
+- Fixed a problem where if positions with high precision are used in Fast Motion Astrometry, the line exported to an MPC report will have a bad RA.
 - Fixed a problem where Fast Motion Astrometry will incorrectly form an MPC report line for numbered asteroids.
+- Fixed a crash during Astrometry which could happen if there are very small number of stars in the FOV.
 
 v3.6.14 (2017-12-07)
 - Upgraded to .NET Framework 4.5
