--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -3,6 +3,7 @@
 vNext (xxxx-xx-xx)
 - Fixed a critical bug in the AVI-to-AAV conversion that leads to an incorrectly determined frame rate in a following AAV-to-FITS conversion.
 - Added support for Video Astrometry from a Roving Observatory (code 274) using MPC's two line OBS format. 
+- Made it possible to use apertures of up to 15 pixels. This doesn't apply to re-processing a saved light curves.
 
 v3.6.15 (2017-12-13)
 - Fixed a problem where if positions with high precision are used in Fast Motion Astrometry, the line exported to an MPC report will have a bad RA.
