--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -2,6 +2,7 @@
 ---------------------
 vNext (UNRELEASED)
 - Fixed a problem where only the first portion of the video will be processed when a sofware integration is used.
+- Fixed a problem where in certain cases Tangra would incorrecly believe that the 247 Roving Observer code has been used when it actually hasn't been.
 
 v3.6.16 (2018-05-08)
 - Relaxed the calculated vs entered time discrepancy for manually entered timestamps of AVI videos.
