--- a/Tangra.Astrometry/MotionFitting/frmRovingObsLocation.resx
+++ b/Tangra.Astrometry/MotionFitting/frmRovingObsLocation.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="label6.Text" xml:space="preserve">
-    <value>    Please note that fast motion video astrometry reports (having the mini-normal positions 'n' flag) from the Roving Observatory Code can only be submitted via the Web Form accessible from the MPC's web site:
+    <value>    Please note that fast motion video astrometry reports (having the mini-normal positions 'n' flag) from the Roving Observatory Code can only be submitted via the                    accessible from the MPC's web site:
 </value>
   </data>
 </root>
