Added support for SER files with RGB and BGR pixel format.

--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,5 +1,8 @@
 ﻿Tangra3 Release Notes
 ---------------------
+v3.6.19 (2019-xx-xx)
+- Added support for SER files with RGB and BGR pixel format.
+
 v3.6.18 (2018-10-19)
 - Improvements to handling of AAV files and convertion of video from AVI to AAV.
 - Improvements to convertion of video to FITS format.
