--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -2,6 +2,7 @@
 ---------------------
 v3.6.19 (2019-xx-xx)
 - Added support for SER files with RGB and BGR pixel format.
+- Fixed a problem where converting SER files to FITS would result in all black images.
 
 v3.6.18 (2018-10-19)
 - Improvements to handling of AAV files and convertion of video from AVI to AAV.
