--- a/Tangra 3/VideoOperations/LightCurves/ucLightCurves.resx
+++ b/Tangra 3/VideoOperations/LightCurves/ucLightCurves.resx
@@ -117,6 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnStackedSelection.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAL1JREFUWEftlAEKhDAMBPv0Pq0/826VTUKplYOGSyWGkQXJMrRgKUewMTHGMHwf
+        vP4GPVLoDnqYUN3pJSzqIWFcspJewqIeEq6l1poL6K71opcB6iFBhZg9eYcQj3s16O6vTz0kjIWYPXmH
+        ELIH6MbVqYeEFDpBdwrNQHcKzUD3XkIWLjB7gO6hEP6W4PyYQhMhQAnLqGwF6H4UIv1pebC3EKCQJz8J
+        ESx5Qo99hbyhRwrdQY+4QmHGxABTjg+K1a3JJDZ3EQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>198, 17</value>
+  </metadata>
   <metadata name="timerMoveToFirstFrame.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
