Improvements to the Acquisition Delay chooser form with extra descriptions and links.

--- a/Tangra 3/VideoOperations/LightCurves/frmAcquisitionDelayChooser.resx
+++ b/Tangra 3/VideoOperations/LightCurves/frmAcquisitionDelayChooser.resx
@@ -120,6 +120,9 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="lblTimestamping.Text" xml:space="preserve">
+    <value>The Windows Clock may be synchronised to UTC by external source or device such as GPS or an NTP Server. The recording software is using the Windows Clock to timestamp the recorded frames as they are received.</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
