--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -1,5 +1,9 @@
 ﻿Tangra3 Release Notes
 ---------------------
+v3.7.3 (2020-05-12)
+- Fixed an AOTA-integration issue with plain AVI files. (broken in 3.7.2)
+- No longer asking for SER file timing details when opening an already processed .lc file.
+
 v3.7.2 (2020-05-05)
 - Made it possible to apply timing corrections for Digital Video Cameras.
 - Added additional information form about the applied timing corrections.
