--- a/Tangra 3/ReleaseNotes.txt
+++ b/Tangra 3/ReleaseNotes.txt
@@ -2,6 +2,7 @@
 ---------------------
 v3.x.x (xxxx-xx-xx)
 - Fixed incorrectly calculated timestamps when using software integration with SER files.
+- Made it possible to create AAV files with no integration and with analogue field corrections.
 
 v3.7.3 (2020-05-12)
 - Fixed an AOTA-integration issue with plain AVI files. (broken in 3.7.2)
